# Cpp_course

./: .gitignore
Homework1/task_2/: CMakeLists.txt  build.sh  install.sh
Homework2/task1/: CMakeLists.txt
Homework2/task1/src/: guessing_game.cpp
Homework2/task2/: CMakeLists.txt
Homework2/task2/src/: task_2.cpp
Homework3/: CMakeLists.txt
Homework3/src/: html_writer.cpp  image_browser.cpp  main.cpp
Homework3/tests/: my_browser.html
Homework3/tests/web_app/: test.html
Homework4/: CMakeLists.txt
Homework4/include/: homework_4.h  named_vector.hpp
Homework4/src/: ipb_algorithm.cpp
header_practice/: CMakeLists.txt  main.cpp  tools.cpp  tools.hpp
scratch/: .clangd  .gitignore  CMakeLists.txt  README.md
scratch/cmake/: project_warnings.cmake
scratch/docs/: lecture_01_build_system.md  lecture_02.md  lecture_03.md  lecture_04.md
scratch/lectures/lecture_01/: CMakeLists.txt  README.md
scratch/lectures/lecture_01/broken_examples/: README.md  multiple_definition_a.cpp  multiple_definition_b.cpp
scratch/lectures/lecture_01/examples/: namespace_a.cpp  namespace_b.cpp  namespace_demo.cpp
scratch/lectures/lecture_01/include/lecture01/: tools.hpp
scratch/lectures/lecture_01/scripts/: manual_build.sh
scratch/lectures/lecture_01/src/: lecture01_notes.cpp  tools.cpp
scratch/lectures/lecture_02/: CMakeLists.txt  README.md
scratch/lectures/lecture_02/src/: lecture02_notes.cpp
scratch/lectures/lecture_03/: CMakeLists.txt  README.md
scratch/lectures/lecture_03/src/: lecture03_notes.cpp
scratch/lectures/lecture_04/: CMakeLists.txt  README.md
scratch/lectures/lecture_04/src/: lecture04_notes.cpp
